<resources>
    <string name="about_phone_title">About</string>
    <string name="AsusCompassCalibration_lable">AsusCompassCalibration</string>
    <string name="GestureTitle">Compass Interference</string>
    <string name="GestureSummary">"Move away any interference 
or re-calibrate by waving Eee 
PAD in a figure motion."</string>
    <string name="never_timeout_entry">Never</string>
    <string name="never_timeout_summary">Screen always on</string>
    <string name="asus_battery_saving_mode_title">MobileDock Battery saving mode</string>
    <string name="asus_battery_saving_mode_summary">Disable wake-up function on keyboard when the device is asleep to save more power.</string>
    <string name="dock_version">MobileDock version</string>
    <string name="dock_not_available">Not available</string>
    <string name="screenshot">Screenshot</string>
    <string name="screenshot_summary">Capture screenshots using the camera key</string>
    <string name="screenshot_summary_soft">Capture screenshots by holding the Recent Apps Key</string>
    <string name="wifi_version">Wi-Fi version</string>
    <string name="bt_version">Bluetooth version</string>
    <string name="gps_version">GPS version</string>
    <string name="geonames_cc_by_title">GeoNames</string>
    <string name="general_sourcecode_offer_title">General source code offer</string>
    <string name="asus_credentials_install">Install from storage</string>
    <string name="asus_credentials_install_summary">Install certificates from storage</string>
    <string name="asus_keyboard_setupwizard_title">Select input method</string>
    <string name="wifi_wapi_psk_type">Password type</string>
    <string name="wifi_wapi_as_certificate">AS certificate</string>
    <string name="wifi_wapi_user_certificate">User certificate</string>
    <string name="wifi_wapi_fail_to_init">"Unable to open WAPI certificates
Credential storage might not enable"</string>
    <string name="wifi_wapi_fail_to_auth">"WAPI authentication failed
Please check validity of certificates"</string>
    <string name="wifi_setup_wapi_cert_not_supported">"You can't configure a WAPI CERT WLAN connection during setup. After setup, you can do that in Settings, under "<b>Wireless &amp; networks</b>.</string>
    <string name="wifi_setup_status_wapi_cert_not_supported">WAPI CERT not supported</string>
    <string name="wifi_wapi_network_open">Open</string>
    <string name="asus_sd_eject">Unmount external storage</string>
    <string name="asus_sd_eject_summary">Remove the external storage safely</string>
    <string name="asus_sd_insert_summary">Insert external storage for mounting</string>
    <string name="asus_sd_mount">Mount external storage</string>
    <string name="asus_dlg_confirm_unmount_title">Unmount external storage</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="device_info_default">Unknown</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_visibility">Discoverable</string>
    <string name="bluetooth_is_discoverable">Discoverable for %1$s seconds…</string>
    <string name="bluetooth_not_discoverable">Make device discoverable</string>
    <string name="bluetooth_visibility_timeout">Discoverable timeout</string>
    <string name="bluetooth_visibility_timeout_summary">Set how long device will be discoverable</string>
    <string name="bluetooth_device_name">Device name</string>
    <string name="bluetooth_name_not_set">No name set, using account name</string>
    <string name="bluetooth_show_received_files_title">Show received files</string>
    <string name="bluetooth_show_received_files_summary">Show the list of files received via Bluetooth</string>
    <string name="radio_controls_title">Wireless &amp; networks</string>
    <string name="date_and_time_settings_title">Date &amp; time</string>
    <string name="security_settings_title">Location &amp; security</string>
    <string name="security_passwords_title">Passwords</string>
    <string name="device_admin_title">Device administration</string>
    <string name="manage_device_admin">Device administrators</string>
    <string name="manage_device_admin_summary">View or deactivate device administrators</string>
    <string name="bluetooth_quick_toggle_summary">Turn on Bluetooth</string>
    <string name="bluetooth_settings">Bluetooth settings</string>
    <string name="bluetooth_preference_find_nearby_title">Find nearby devices</string>
    <string name="bluetooth_preference_device_settings">Device settings</string>
    <string name="bluetooth_preference_paired_devices">Paired devices</string>
    <string name="wifi_advanced_titlebar">Advanced</string>
    <string name="wifi_setting_frequency_band_title">Wi-Fi frequency band</string>
    <string name="wifi_setting_frequency_band_summary">Specify the frequency range of operation</string>
    <string name="wifi_advanced_mac_address_title">MAC address</string>
    <string name="wifi_advanced_ip_address_title">IP address</string>
    <string name="sound_settings_title">Sound</string>
    <string name="display_settings_title">Screen</string>
    <string name="dock_settings">Dock</string>
    <string name="sync_settings">Accounts &amp; sync</string>
    <string name="display_settings">Screen settings</string>
    <string name="animations_title">Animation</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="brightness">Brightness</string>
    <string name="screen_timeout">Timeout</string>
    <string name="screen_timeout_summary">Screen turns off automatically after %1$s</string>
    <string name="sim_lock_settings_category">Set up SIM card lock</string>
    <string name="sim_lock_settings_title">SIM card lock</string>
    <string name="system_update_settings_list_item_title">System updates</string>
    <string name="system_update_settings_list_item_summary" />
    <string name="firmware_version">Android version</string>
    <string name="model_number">Model number</string>
    <string name="baseband_version">Baseband version</string>
    <string name="kernel_version">Kernel version</string>
    <string name="build_number">Build number</string>
    <string name="device_status">Status</string>
    <string name="device_status_summary">Status of the battery, network, and other information</string>
    <string name="storage_settings">Storage</string>
    <string name="call_settings_title">Call settings</string>
    <string name="about_settings">About tablet</string>
    <string name="legal_information">Legal information</string>
    <string name="copyright_title">Copyright</string>
    <string name="license_title">License</string>
    <string name="terms_title">Terms and conditions</string>
    <string name="system_tutorial_list_item_title">System tutorial</string>
    <string name="system_tutorial_list_item_summary">Learn how to use your tablet</string>
    <string name="settings_safetylegal_title">Safety information</string>
    <string name="manageapplications_settings_title">Manage applications</string>
    <string name="manageapplications_settings_summary">Manage and remove installed applications</string>
    <string name="applications_settings">Applications</string>
    <string name="applications_settings_summary">Manage applications, set up quick launch shortcuts</string>
    <string name="applications_settings_header">Application settings</string>
    <string name="install_applications">Unknown sources</string>
    <string name="install_unknown_applications">Allow installation of non-Market applications</string>
    <string name="app_install_location_title">Preferred install location</string>
    <string name="app_install_location_summary">Change the preferred installation location for new applications.</string>
    <string name="storageuse_settings_title">Storage use</string>
    <string name="storageuse_settings_summary">View storage used by applications</string>
    <string name="runningservices_settings_title">Running services</string>
    <string name="runningservices_settings_summary">View and control currently running services</string>
    <string name="language_settings">Language &amp; input</string>
    <string name="language_keyboard_settings_title">Language &amp; input</string>
    <string name="language_settings_category">Language settings</string>
    <string name="keyboard_settings_category">Keyboard settings</string>
    <string name="phone_language">Select language</string>
    <string name="show_password">Visible passwords</string>
    <string name="show_password_summary">Show password as you type</string>
    <string name="pointer_settings_category">Mouse and trackpad settings</string>
    <string name="pointer_speed">Pointer speed</string>
    <string name="user_dict_settings_title">User dictionary</string>
    <string name="user_dict_settings_summary" />
    <string name="current_input_method">Current input method</string>
    <string name="input_method_selector">Input method selector</string>
    <string name="configure_input_method">Configure input methods</string>
    <string name="development_settings_title">Development</string>
    <string name="development_settings_summary">Set options for application development</string>
    <string name="accessibility_settings">Accessibility</string>
    <string name="accessibility_settings_title">Accessibility settings</string>
    <string name="toggle_accessibility_title">Accessibility</string>
    <string name="accessibility_services_category">Accessibility services</string>
    <string name="accessibility_script_injection_category">Accessibility scripts</string>
    <string name="accessibility_script_injection_enabled">Download accessibility scripts</string>
    <string name="accessibility_script_injection_enabled_summary">Allow applications to download accessibility scripts from Google</string>
    <string name="accessibility_power_button_category">Power button</string>
    <string name="accessibility_power_button_ends_call">Power button ends call</string>
    <string name="accessibility_power_button_ends_call_summary">During a call, pressing Power ends call instead of turning off screen</string>
    <string name="touchscreen_gestures_category">Touchscreen gestures</string>
    <string name="long_press_timeout_selector_title">Touch &amp; hold delay</string>
    <string name="long_press_timeout_selector_summary">Delay until a touch is interpreted as a touch &amp; hold</string>
    <string name="long_press_timeout_selector_default_value">500</string>
    <string name="power_usage_summary_title">Battery use</string>
    <string name="power_usage_summary">What has been using the battery</string>
    <string name="voice_input_category">Voice input</string>
    <string name="voice_output_category">Voice output</string>
    <string name="recognizer_title">Voice recognizer</string>
    <string name="recognizer_settings_title">Voice recognizer settings</string>
    <string name="tts_settings_title">Text-to-speech settings</string>
    <string name="vpn_username_colon">Username:</string>
    <string name="vpn_password_colon">Password:</string>
    <string name="vpn_save_username">Remember username</string>
    <string name="credentials_title">Credential storage</string>
    <string name="credentials_access">Use secure credentials</string>
    <string name="credentials_access_summary">Allow applications to access secure certificates and other credentials</string>
    <string name="credentials_set_password">Set password</string>
    <string name="credentials_set_password_summary">Set or change the password for credential storage</string>
    <string name="credentials_reset">Clear credentials</string>
    <string name="credentials_reset_summary">Remove all the contents and reset the password</string>
    <string name="privacy_settings">Privacy</string>
</resources>