<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/bluetooth_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/bluetooth_preference_device_settings" />
    <CheckBoxPreference android:title="@string/bluetooth" android:key="bt_checkbox" android:summary="@string/bluetooth_quick_toggle_summary" />
    <com.android.settings.bluetooth.BluetoothNamePreference android:persistent="false" android:singleLine="true" android:title="@string/bluetooth_device_name" android:key="bt_name" android:summary="@string/bluetooth_name_not_set" android:dependency="bt_checkbox" android:dialogTitle="@string/bluetooth_device_name" />
    <CheckBoxPreference android:persistent="false" android:title="@string/bluetooth_visibility" android:key="bt_discoverable" android:dependency="bt_checkbox" android:summaryOn="@string/bluetooth_is_discoverable" android:summaryOff="@string/bluetooth_not_discoverable" />
    <ListPreference android:entries="@array/bluetooth_visibility_timeout_entries" android:title="@string/bluetooth_visibility_timeout" android:key="bt_discoverable_timeout" android:summary="@string/bluetooth_visibility_timeout_summary" android:dependency="bt_discoverable" android:entryValues="@array/bluetooth_visibility_timeout_values" />
    <Preference android:title="@string/bluetooth_show_received_files_title" android:key="bt_show_received_files" android:summary="@string/bluetooth_show_received_files_summary" android:dependency="bt_checkbox" />
    <PreferenceCategory android:title="@string/bluetooth_preference_paired_devices" android:orderingFromXml="false" android:key="bt_device_list" />
    <Preference android:title="@string/bluetooth_preference_find_nearby_title" android:key="bt_find_nearby" android:dependency="bt_checkbox" android:fragment="com.android.settings.bluetooth.BluetoothFindNearby" />
</PreferenceScreen>
