<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/applications_settings_header" android:key="applications_settings" android:summary="@string/applications_settings_summary"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:title="@string/manageapplications_settings_title" android:summary="@string/manageapplications_settings_summary" android:fragment="com.android.settings.applications.ManageApplications" />
    <PreferenceScreen android:title="@string/runningservices_settings_title" android:summary="@string/runningservices_settings_summary" android:fragment="com.android.settings.applications.ManageApplications">
        <extra android:name="classname" android:value="com.android.settings.Settings$RunningServicesActivity" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/storageuse_settings_title" android:summary="@string/storageuse_settings_summary" android:fragment="com.android.settings.applications.ManageApplications">
        <extra android:name="classname" android:value="com.android.settings.Settings$StorageUseActivity" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/power_usage_summary_title" android:key="power_usage" android:summary="@string/power_usage_summary" android:fragment="com.android.settings.fuelgauge.PowerUsageSummary" />
    <CheckBoxPreference android:persistent="false" android:title="@string/install_applications" android:key="toggle_install_applications" android:summaryOn="@string/install_unknown_applications" android:summaryOff="@string/install_unknown_applications" />
    <ListPreference android:persistent="false" android:entries="@array/app_install_location_entries" android:title="@string/app_install_location_title" android:key="app_install_location" android:summary="@string/app_install_location_summary" android:entryValues="@array/app_install_location_values" />
    <PreferenceScreen android:title="@string/development_settings_title" android:summary="@string/development_settings_summary" android:fragment="com.android.settings.DevelopmentSettings" />
</PreferenceScreen>
