<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:persistent="false" android:title="@string/sim_lock_settings_title" android:key="sim_lock">
        <Preference android:persistent="false" android:title="@string/sim_lock_settings_category">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.IccLockSettings" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:persistent="false" android:title="@string/security_passwords_title">
        <CheckBoxPreference android:persistent="false" android:title="@string/show_password" android:key="show_password" android:summary="@string/show_password_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:persistent="false" android:title="@string/device_admin_title">
        <Preference android:persistent="false" android:title="@string/manage_device_admin" android:summary="@string/manage_device_admin_summary" android:fragment="com.android.settings.DeviceAdminSettings" />
    </PreferenceCategory>
    <PreferenceCategory android:persistent="false" android:title="@string/credentials_title">
        <CheckBoxPreference android:persistent="false" android:title="@string/credentials_access" android:key="enable_credentials" android:summary="@string/credentials_access_summary" />
        <Preference android:persistent="false" android:title="@string/asus_credentials_install" android:summary="@string/asus_credentials_install_summary">
            <intent android:targetPackage="com.android.certinstaller" android:action="android.credentials.INSTALL" android:targetClass="com.android.certinstaller.CertInstallerMain" />
        </Preference>
        <Preference android:persistent="false" android:title="@string/credentials_set_password" android:summary="@string/credentials_set_password_summary">
            <intent android:targetPackage="com.android.settings" android:action="com.android.credentials.SET_PASSWORD" android:targetClass="com.android.settings.CredentialStorage" />
        </Preference>
        <Preference android:persistent="false" android:title="@string/credentials_reset" android:key="reset_credentials" android:summary="@string/credentials_reset_summary">
            <intent android:targetPackage="com.android.settings" android:action="com.android.credentials.RESET" android:targetClass="com.android.settings.CredentialStorage" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
