<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/accessibility_settings_title"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <CheckBoxPreference android:persistent="false" android:title="@string/toggle_accessibility_title" android:key="toggle_accessibility_service_checkbox" />
    <PreferenceCategory android:title="@string/accessibility_services_category" android:key="accessibility_services_category" />
    <PreferenceCategory android:title="@string/accessibility_script_injection_category" android:key="accessibility_script_injection_category">
        <CheckBoxPreference android:persistent="false" android:title="@string/accessibility_script_injection_enabled" android:key="toggle_accessibility_script_injection_checkbox" android:summary="@string/accessibility_script_injection_enabled_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/accessibility_power_button_category" android:key="power_button_category">
        <CheckBoxPreference android:persistent="false" android:title="@string/accessibility_power_button_ends_call" android:key="power_button_ends_call" android:summary="@string/accessibility_power_button_ends_call_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/touchscreen_gestures_category" android:key="touchscreen_gestures_category">
        <ListPreference android:persistent="true" android:entries="@array/long_press_timeout_selector_titles" android:title="@string/long_press_timeout_selector_title" android:key="long_press_timeout_list_preference" android:summary="@string/long_press_timeout_selector_summary" android:defaultValue="@string/long_press_timeout_selector_default_value" android:entryValues="@array/long_press_timeout_selector_values" />
    </PreferenceCategory>
</PreferenceScreen>
