<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/display_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <com.android.settings.BrightnessPreference android:title="@string/brightness" android:key="brightness" android:dialogTitle="@string/brightness" />
    <CheckBoxPreference android:title="@string/accelerometer_title" android:key="accelerometer" />
    <CheckBoxPreference android:layout="@layout/preference_child_screenshot_holo" android:title="@string/screenshot" android:key="screenshot" />
    <CheckBoxPreference android:persistent="false" android:title="@string/asus_battery_saving_mode_title" android:key="asus_battery_saving_mode" android:summary="@string/asus_battery_saving_mode_summary" android:defaultValue="true" />
    <ListPreference android:persistent="false" android:entries="@array/animations_entries" android:title="@string/animations_title" android:key="animations" android:entryValues="@array/animations_values" />
    <ListPreference android:persistent="false" android:entries="@array/screen_timeout_entries" android:title="@string/screen_timeout" android:key="screen_timeout" android:summary="@string/screen_timeout_summary" android:entryValues="@array/screen_timeout_values" />
</PreferenceScreen>
