<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <TextView android:gravity="right" android:id="@id/username_str" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/vpn_connect_margin_right" android:text="@string/vpn_username_colon" />
            <EditText android:id="@id/username_value" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:layout_toRightOf="@id/username_str" android:layout_alignBaseline="@id/username_str" />
            <EditText android:id="@id/password_value" android:layout_width="fill_parent" android:layout_height="wrap_content" android:password="true" android:singleLine="true" android:layout_below="@id/username_value" android:layout_alignLeft="@id/username_value" />
            <TextView android:id="@id/password_str" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vpn_password_colon" android:layout_alignBaseline="@id/password_value" android:layout_alignRight="@id/username_str" />
        </RelativeLayout>
        <CheckBox android:id="@id/save_username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="66.0dip" android:text="@string/vpn_save_username" />
    </LinearLayout>
</ScrollView>
